Bug 130314 - Web Replay: capture and replay keyboard events
Summary: Web Replay: capture and replay keyboard events
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: BJ Burg
URL:
Keywords:
Depends on: 129692
Blocks:
  Show dependency treegraph
 
Reported: 2014-03-16 14:15 PDT by BJ Burg
Modified: 2014-03-24 17:53 PDT (History)
5 users (show)

See Also:


Attachments
the patch (18.05 KB, patch)
2014-03-21 20:36 PDT, BJ Burg
joepeck: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description BJ Burg 2014-03-16 14:15:58 PDT
Split this off from 129395
Comment 1 BJ Burg 2014-03-21 20:36:48 PDT
Created attachment 227530 [details]
the patch
Comment 2 WebKit Commit Bot 2014-03-21 20:37:43 PDT
Attachment 227530 [details] did not pass style-queue:


ERROR: Source/WebCore/replay/SerializationMethods.cpp:70:  _key is incorrectly named. Don't use underscores in your identifier names.  [readability/naming/underscores] [4]
Total errors found: 1 in 8 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Joseph Pecoraro 2014-03-24 14:50:38 PDT
Comment on attachment 227530 [details]
the patch

View in context: https://bugs.webkit.org/attachment.cgi?id=227530&action=review

r=me

> Source/WebCore/replay/SerializationMethods.cpp:148
> +    decodedValue = textWasDecoded ? KeypressCommand(commandName, text) : KeypressCommand(commandName);

The origin os "textWasDecoded" is pretty cryptic, but I think its fine.

> Source/WebCore/replay/SerializationMethods.cpp:154
> +    PlatformKeyboardEventAppKit(const PlatformKeyboardEvent& event, bool handledByInputMethod, Vector<KeypressCommand> commands)

Nit: Vector<>& commands
Comment 4 BJ Burg 2014-03-24 16:09:58 PDT
Comment on attachment 227530 [details]
the patch

View in context: https://bugs.webkit.org/attachment.cgi?id=227530&action=review

>> Source/WebCore/replay/SerializationMethods.cpp:148
>> +    decodedValue = textWasDecoded ? KeypressCommand(commandName, text) : KeypressCommand(commandName);
> 
> The origin os "textWasDecoded" is pretty cryptic, but I think its fine.

Yeah.. not my favorite case. I decided to prepend the key name so that capitalization is consistent for single and multi-word keys.

>> Source/WebCore/replay/SerializationMethods.cpp:154
>> +    PlatformKeyboardEventAppKit(const PlatformKeyboardEvent& event, bool handledByInputMethod, Vector<KeypressCommand> commands)
> 
> Nit: Vector<>& commands

OK
Comment 5 BJ Burg 2014-03-24 17:53:11 PDT
Committed r166212: <http://trac.webkit.org/changeset/166212>